--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "reselect": "^4.0.0",
+    "typescript": "^3.7.3"
   },
   "scripts": {
     "start": "react-scripts start",
