--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
     "name": "crwn-clothing-server",
+    "description": "Crwn clothing Api",
+    "license": "UNLICENSED",
+    "repository": {},
     "version": "1.0.0",
     "engines": {
         "node": "12.13.0",
@@ -23,6 +26,7 @@
     },
     "devDependencies": {
         "concurrently": "^4.0.1",
-        "nodemon": "^1.19.1"
+        "nodemon": "^2.0.2",
+        "react": "^16.13.1"
     }
 }
