--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "@material-ui/core": "^4.9.5",
     "axios": "^0.19.2",
-    "firebase": "^7.5.0",
+    "firebase": "^7.14.1",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -46,5 +46,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2"
   }
 }
