notification component with redux

--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost:5000",
   "dependencies": {
     "@material-ui/core": "^4.9.11",
+    "@material-ui/lab": "^4.0.0-alpha.51",
     "axios": "^0.19.2",
     "firebase": "^7.14.1",
     "node-sass": "^4.13.0",
